# xmos-xcore-bootstrap

./: CMakeLists.txt  CMakePresets.json
src/: main.c
